part4/4_04/manifests/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: todo-app
  name: todo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo
  template:
    metadata:
      labels:
        app: todo
    spec:
      containers:
        - name: todo
          image: PROJECT/BACKEND_IMAGE
          command: ["/bin/sh"]
          args: ["-c", "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"]
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 5
            httpGet:
               path: /todo/todos/
               port: 8000
          livenessProbe:
            initialDelaySeconds: 20
            periodSeconds: 5
            httpGet:
               path: /todo/todos/
               port: 8000
